# gepa

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json  run.py
.claude/: CLAUDE.md
.github/workflows/: run_tests.yml
analysis_output/: ANALYSIS_REPORT.md  analyze_runs.py  detailed_analysis.py  heatmap_weights.py  statistical_analysis_report.md  statistical_results.json  valset_scores_adaboost.csv  valset_scores_adaboost.json  valset_scores_baseline.csv  valset_scores_baseline.json  valset_scores_bayesian.csv  valset_scores_bayesian.json
assets/: paper.md
exps/: gpqa_adaboost_avg.py  gpqa_adaboost_max.py  gpqa_diamond.py  gpqa_diamond_adaboost.py  gpqa_diamond_bayesian.py  gpqa_diamond_bayesian_w5.py  gpqa_diamond_feedback_descent.py  gpqa_diamond_pada.py  gpqa_diamond_pmax.py  memory_bfcl.py  memory_bfcl_adaboost.py  memory_bfcl_routing.py  memory_gpqa_diamond.py  memory_nyt_connections.py  nyt_connections.py  nyt_connections_adaboost.py  nyt_connections_diamond.py  super_gpqa.py  test.py
knowledge/: README.md  adaboost_candidate_analysis.md  adaboost_max3_vs_max_analysis.md  all_runs_data.json  comprehensive_parent_child_stats.json  ensemble_statistical_analysis.md  frontier_targeting_via_variance.md  gemini_discussion_prompt_evolution.md  papers_on_diverse_expert_ensembles.md  selector_optimization_potential_analysis.md  shared_active_subset_coevolution.md  survey_slides_completed.md
knowledge/architecture/: gepa_algorithm_and_codebase_mapping.md  trainset_vs_valset.md  wandb_tables_and_metrics.md
knowledge/ideas/: gemini_discussion_ensemble_evolution.md  nas_inspired_memory_architecture_search.md  sprt_adaptive_minibatch_gate.md
knowledge/literature/: diversity_optimization_in_evolutionary_algorithms.md
scripts/: analyze_adaboost_mutations.py  analyze_parent_features.py  analyze_wandb_runs.py  analyze_wandb_runs_v2.py  bootstrap_optimal_M.py  debug_val_scores.py  fetch_valset_outputs.py  fetch_valset_scores.py  generate_slides_plots.py  plot_mutation_scores.py  plot_parent_child_scores.py  plot_val_scores.py  plot_with_labels.py  read_best_prompts.py  statistical_analysis_existing.py
slides_export/: GEPA_Survey_Slides.md
src/gepa/: __init__.py  api.py  cache.py  datasets.py
src/gepa/adapters/: README.md
src/gepa/adapters/default_adapter/: default_adapter.py
src/gepa/adapters/mcp_adapter/: mcp_adapter.py
src/gepa/adapters/memory_adapter/: __init__.py  memory_adapter.py  memory_store.py  routing_adapter.py
src/gepa/core/: adapter.py  callbacks.py  engine.py  result.py  state.py
src/gepa/examples/: aime.py  bfcl.py  gpqa.py  nyt_connections.py  super_gpqa.py
src/gepa/examples/mcp_adapter/: mcp_optimization_example.py
src/gepa/logging/: __init__.py  experiment_tracker.py  logger.py  prompt_tracker.py  utils.py  weave_tracing.py
src/gepa/proposer/: merge.py
src/gepa/proposer/reflective_mutation/: __init__.py  common.py  feedback_descent.py  reflective_mutation.py
src/gepa/strategies/: __init__.py  adaboost_sampler.py  batch_sampler.py  bayesian_batch_sampler.py  candidate_selector.py  instruction_proposal.py  residual_weighted_sampler.py  sprt_gate.py
tests/: conftest.py  test_adaboost_sampler.py  test_candidate_selector.py  test_experiment_tracking.py  test_mcp_adapter.py  test_memory_adapter.py  test_module_selector.py  test_optimize.py  test_residual_weighted_sampler.py  test_routing_memory_adapter.py  test_state.py  test_weave_tracing.py
tests/proposer/: test_merge.py
tests/strategies/: test_bayesian_batch_sampler.py  test_sprt_gate.py
