[build-system]
requires = ["setuptools>=77.0.1", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
# Do not add spaces around the '=' sign for any of the fields
# preceded by a marker comment as it affects the publish workflow.
#replace_package_name_marker
name="gepa"
#replace_package_version_marker
version="0.0.27"
description = "A framework for optimizing textual system components (AI prompts, code snippets, etc.) using LLM-based reflection and Pareto-efficient evolutionary search."
readme = "README.md"
authors = [
  { name = "Lakshya A Agrawal", email = "lakshyaaagrawal@berkeley.edu" }
]
license = { text = "MIT" }
requires-python = ">=3.10, <3.15"

dependencies = [
    "litellm>=1.81.5",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
full = [
    # Original dependencies for Python < 3.14
    "litellm[caching]>=1.64.0; python_version < '3.14'",
    "datasets>=2.14.6; python_version < '3.14'",
    "mlflow>=3.0.0; python_version < '3.14'",
    "wandb; python_version < '3.14'",
    # Updated dependencies for Python 3.14+
    "litellm[caching]>=1.81.0; python_version >= '3.14'",
    "datasets>=4.5.0; python_version >= '3.14'",
    "mlflow-skinny>=3.8.1; python_version >= '3.14'",
    "wandb>=0.23.0; python_version >= '3.14'",
    "pyarrow>=22.0.0; python_version >= '3.14'",
    "pydantic>=2.12.0; python_version >= '3.14'",
    "tiktoken>=0.12.0; python_version >= '3.14'",
    # Common dependencies
    "tqdm>=4.66.1"
]
dspy = []
test = [
    "gepa[full]",
    "pytest",
    "pyright"
]
build = [
    "setuptools>=77.0.1",
    "wheel",
    "build",
    "twine",
    "semver",
    "packaging",
    "requests"
]
dev = [
    "gepa[test]",
    "gepa[build]",
    "pre-commit",
    "build>=1.0.3",
    "ruff>=0.3.0"
]

[project.urls]
"Homepage" = "https://github.com/gepa-ai/gepa"
"Bug Tracker" = "https://github.com/gepa-ai/gepa/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gepa = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
include = ["src/**/*.py"]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
    "Q",   # flake8-quotes
]
ignore = [
    "B027",  # Allow non-abstract empty methods in abstract base classes
    "FBT003",# Allow boolean positional values in function calls
    "C901",  # Ignore complexity checking
    "E501",  # Ignore line length errors (handled by formatter)
    "UP035", # Allow python typing modules
    "RUF005", # Allow using + operator to concatenate collections
    "B904", # Allow raise custom exceptions in except blocks
    "F403", # Allow wildcard imports
    "E721", # Allow using == to compare with type
    "UP031", # Allow percent format
    "RUF022", # Allow unsorted __all__ value
    "E731"
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = false
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["gepa"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Allow assert statements in tests
    "TID252",  # Allow relative imports in tests
    "ARG001",  # Allow unused arguments in tests (like pytest fixtures)
]
"__init__.py" = ["F401"]  # Init files can be empty
